# polymarket-CLI

./: Cargo.toml
src/: auth.rs  config.rs  farmer.rs  main.rs  shell.rs
src/commands/: approve.rs  bridge.rs  clob.rs  comments.rs  ctf.rs  data.rs  events.rs  markets.rs  mod.rs  profiles.rs  series.rs  setup.rs  sports.rs  tags.rs  wallet.rs
src/output/: approve.rs  bridge.rs  comments.rs  data.rs  events.rs  markets.rs  mod.rs  profiles.rs  series.rs  sports.rs  tags.rs
src/output/clob/: account.rs  books.rs  markets.rs  mod.rs  orders.rs  prices.rs
