[package]
name = "polymarket-cli"
version = "0.1.4"
edition = "2024"
rust-version = "1.88.0"
description = "CLI for Polymarket — browse markets, trade, and manage positions"
license = "MIT"
repository = "https://github.com/Polymarket/polymarket-cli"
keywords = ["polymarket", "prediction-markets", "trading", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "polymarket"
path = "src/main.rs"

[[bin]]
name = "farmer"
path = "src/farmer.rs"

[dependencies]
polymarket-client-sdk = { version = "0.4", features = ["gamma", "data", "bridge", "clob", "ctf"] }
alloy = { version = "1.6.3", default-features = false, features = ["providers", "sol-types", "contract", "reqwest", "reqwest-rustls-tls", "signer-local", "signers"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tabled = "0.17"
rust_decimal = "1"
anyhow = "1"
chrono = "0.4"
dirs = "6"
rustyline = "15"
teloxide = { version = "0.13", features = ["macros"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rust_decimal_macros = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
